# llm-as-a-judge

./: .env.example  .gitignore  comparison_integration_vs_controversy.md  ergebnisse_erster_run_2proposals.md  proposal_1333002_all_runs.md  pyproject.toml  sprachanalyse_integration_vs_controversy.md
Initalize/: multi-agent-spec.md  output_format_centralized.md
data/: Jury Bewertungen.xlsx
data/C1-Behavior/: 1333002.txt  1333885.txt  1333894.txt  1333903.txt  1333904.txt  1333916.txt  1333948.txt  1333979.txt  1334010.txt  1334038.txt  1334078.txt  1334082.txt  1334089.txt  1334090.txt  1334091.txt  1334099.txt  1334104.txt  1334116.txt  1334125.txt  1334147.txt  1334157.txt  1334162.txt  1334191.txt  1334192.txt  1334195.txt  1334202.txt  C1.json
data/C2-Adaptation/: 1333853.txt  1333920.txt  1333933.txt  1333941.txt  1333943.txt  1333971.txt  1333972.txt  1333973.txt  1333974.txt  1333975.txt  1333978.txt  1333980.txt  1334068.txt  1334071.txt  1334077.txt  1334080.txt  1334085.txt  1334100.txt  1334101.txt  1334105.txt  1334106.txt  1334112.txt  1334114.txt  1334138.txt  1334156.txt  1334164.txt  C2.json
data/C3-LandUse/: 1333877.txt  1333926.txt  1333931.txt  1333932.txt  1333957.txt  1333989.txt  1333991.txt  1333992.txt  1333999.txt  1334007.txt  1334034.txt  1334037.txt  1334052.txt  1334060.txt  1334070.txt  1334083.txt  1334097.txt  1334117.txt  1334127.txt  1334135.txt  1334140.txt  1334150.txt  1334158.txt  1334163.txt  1334168.txt  1334174.txt  C3.json
judgex/: data.py  llm.py  personas.py  runtime.py  schemas.py
scripts/: run_smoke.py
(+116 files in other folders)
