[project]
name = "judgex"
version = "0.1.0"
description = "Multi-Agent System Comparison for Wicked-Problem Evaluation"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "anthropic>=0.40.0",
    "pydantic>=2.8.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["judgex*"]

[tool.ruff]
line-length = 100
target-version = "py311"
